--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset='utf-8'>
 	<title>Chat</title>
-	<link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel='stylesheet' href='public/stylesheets/style.css' />
 </head>
 <body>
 	<div id='app'></div>
-	<script src='javascripts/chat.min.js'></script>
+	<script src='chat.min.js'></script>
 </body>
 </html>
