--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,12 +3,10 @@
 <html>
 <head>
 	<title>Node Authentication</title>
+	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<style>
-	body {
-        padding-top:80px;
-    }
+	body {padding-top:80px;}
 </style>
 </head>
 <body>
@@ -23,11 +21,11 @@
 			<form action="/login" method="post">
 				<div class="form-group">
 					<label>Email</label>
-					<input type="text" class="form-control" name="email">
+					<input type="text" class="form-control" name="email" required>
 				</div>
 				<div class="form-group">
 					<label>Password</label>
-					<input type="password" class="form-control" name="password">
+					<input type="password" class="form-control" name="password" required>
 				</div>
 
 				<button type="submit" class="btn btn-warning btn-lg">Login</button>
