--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,11 +3,11 @@
 <html>
 <head>
 	<title>Node Authentication</title>
+	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<style>
-	body		{ padding-top:80px; }
-</style>
+		body {padding-top:80px;}
+	</style>
 </head>
 <body>
 	<div class="container">
@@ -20,14 +20,17 @@
 			<!-- LOGIN FORM -->
 			<form action="/signup" method="post">
 				<div class="form-group">
+					<label>Name</label>
+					<input type="text" class="form-control" name="name" required>
+				</div>
+				<div class="form-group">
 					<label>Email</label>
-					<input type="text" class="form-control" name="email">
+					<input type="text" class="form-control" name="email" required>
 				</div>
 				<div class="form-group">
 					<label>Password</label>
-					<input type="password" class="form-control" name="password">
+					<input type="password" class="form-control" name="password" required>
 				</div>
-
 				<button type="submit" class="btn btn-warning btn-lg">Signup</button>
 			</form>
 			<hr>
