--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<title>Chat</title>
-	<link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel='stylesheet' href='stylesheets/style.css' />
 </head>
 <body>
 	<div id='app'></div>
