--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<title>Chat</title>
+	<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
 	<link rel='stylesheet' href='public/stylesheets/style.css' />
 </head>
 <body>
